--- a/react-linker-site/src/App.css
+++ b/react-linker-site/src/App.css
@@ -25,6 +25,8 @@
     align-items: center;
 }
 
+
+
  /* This is just the config of the container */
 .app-container {
     width: 320px;
@@ -35,4 +37,13 @@
     color: #fff;
 }
 
- 
+ /* Glow effect on hover */
+ .app-container:hover {
+     box-shadow:
+             0px 10px 30px rgba(178, 255, 223, 0.8), /* Base shadow */
+             0px 0px 20px rgba(210, 255, 131, 0.8), /* Outer glow */
+             0px 0px 30px rgba(100, 181, 246, 0.6), /* Gradient transition */
+             0px 0px 40px rgba(155, 156, 157, 0.5); /* Gradient transition to a darker shade */
+     transform: scale(1.05); /* Optional: Slightly scale up the container */
+     transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth animation */
+ }
